Fix that table on modal overflow the modal on medium screen size.

--- a/src/OrchardCore.Modules/OrchardCore.Media/Assets/scss/media.scss
+++ b/src/OrchardCore.Modules/OrchardCore.Media/Assets/scss/media.scss
@@ -326,8 +326,8 @@ $media-border-content: 1px solid rgba(0, 0, 0, 0.1);
 
 .modal-body .media-container {
     // on modal the available space is smaller. So the buttons overlap.
-    // Breakpoints that switches visibility of buttons on full screen are not valid on modal.
-    // So we use these classes to enforce the layout we have on small screen.
+    // Breakpoints that switches visibility of buttons on full screen are not OK for the modal.
+    // So we use these classes to enforce the same layout we have on small screen even when the screen size is not small.
     .visible-on-modal {
         display: flex !important;
     }
@@ -337,9 +337,15 @@ $media-border-content: 1px solid rgba(0, 0, 0, 0.1);
     }
 
     #media-container-navigation-menu a,
-    .breadcrumb-item a,
-    .media-items-table .media-filename {
+    .breadcrumb-item a {
         font-size: 0.9rem;
+    }
+    // there is a size's range where the table mode overflows the modal.
+    // We fix it by hidding extra columns while in that range
+    @include media-breakpoint-only(md) {
+        .optional-col {            
+            display:none;
+        }
     }
 }
 
